--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="fa-IR">
   <head>
     <meta charset="UTF-8">
     <title>کتابخانه های پر کاربرد وب</title>
@@ -24,7 +24,7 @@
 مجموعه ای از کتابخانه های پر کاربرد وب
 </p>
       <footer class="site-footer">
-        <span class="site-footer-owner">&nbsp;تمامی حقوق محفوظ است <a href="https://rasoulian.com/">rasoulian</a>.</span>
+        <span class="site-footer-owner">&nbsp;تمامی حقوق محفوظ است <a href="https://rasoulian.net">rasoulian</a>.</span>
       </footer>
     </section>
     <script>
