--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>کتابخانه های پر کاربرد وب</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v3.1.0/dist/font-face.css" rel="stylesheet" type="text/css" />
+    <link href="//cssjs.ir/fonts/yekan/style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="github-light.css" media="screen">
-    <style>body{font-family: Vazir,Tahoma,"DejaVu Sans",helvetica,arial,freesans,sans-serif;}</style>
+    <style>body{font-family: Yekan,Tahoma,"DejaVu Sans",helvetica,arial,freesans,sans-serif;}</style>
   </head>
   <body dir="rtl">
     <section class="page-header">
