--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>کتابخانه های پر کاربرد وب</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//cssjs.ir/fonts/yekan/style.css" rel="stylesheet" type="text/css" />
+    <link href="//cssjs.ir/fonts/Yekan/style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="github-light.css" media="screen">
     <style>body{font-family: Yekan,Tahoma,"DejaVu Sans",helvetica,arial,freesans,sans-serif;}</style>
