--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="fa-IR">
   <head>
-    <meta charset="UTF-8">
+    <base href="https://cssjs.ir">
     <title>کتابخانه های پر کاربرد وب</title>
+    <link rel="canonical" href="https://cssjs.ir" />
+    <meta charset="UTF-8">
+    <meta name="author" content="rasoulian">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="github-light.css" media="screen">
