--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 مجموعه ای از کتابخانه های پر کاربرد وب
 </p>
       <footer class="site-footer">
-        <span class="site-footer-owner">&nbsp;تمامی حقوق محفوظ است <a href="https://rasoulian.net">rasoulian</a>.</span>
+        <span class="site-footer-owner">&nbsp;تمامی حقوق محفوظ است <a href="https://rasoulian.ir">rasoulian</a>.</span>
       </footer>
     </section>
     <script>
